// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCard Component Should call function with updated array as parameter when button is clicked 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      >
        <div
          class="d-flex flex-column ml-3 mr-3 mb-4"
        >
          <h5
            data-testid="h5fireStarter0"
          >
            Firestarter
          </h5>
          <div
            style="background-color: white;"
          >
            <button
              class="btn"
              style="color: rgb(41, 41, 41);"
            >
              Write
            </button>
            <button
              class="btn"
              style="color: rgb(142, 142, 142);"
            >
              Preview
            </button>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
            />
          </div>
        </div>
      </div>
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should output empty title when title is empty 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      >
        <div
          class="d-flex flex-column ml-3 mr-3 mb-4"
        >
          <h5
            data-testid="h50"
          />
          <input
            class="form-control"
            data-testid="input0"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render MdInput component when type is MD_INPUT 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      >
        <div
          class="d-flex flex-column ml-3 mr-3 mb-4"
        >
          <h5
            data-testid="h5fireStarter0"
          >
            Firestarter
          </h5>
          <div
            style="background-color: white;"
          >
            <button
              class="btn"
              style="color: rgb(41, 41, 41);"
            >
              Write
            </button>
            <button
              class="btn"
              style="color: rgb(142, 142, 142);"
            >
              Preview
            </button>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
              style="height: 2px;"
            />
          </div>
        </div>
      </div>
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render nothing if id is a title 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      />
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      >
        <div
          class="d-flex flex-column ml-3 mr-3 mb-4"
        >
          <h5
            data-testid="h5fireStarter0"
          >
            Firestarter
          </h5>
          <input
            class="form-control"
            data-testid="input0"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types MdInput 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="card shadow-sm col-12"
    >
      <div
        class="card-body text-center"
      />
      <div
        class="text-left"
      >
        <div
          class="d-flex flex-column ml-3 mr-3 mb-4"
        >
          <h5
            data-testid="h5fireStarter0"
          >
            Firestarter
          </h5>
          <div
            style="background-color: white;"
          >
            <button
              class="btn"
              style="color: rgb(41, 41, 41);"
            >
              Write
            </button>
            <button
              class="btn"
              style="color: rgb(142, 142, 142);"
            >
              Preview
            </button>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
              style="height: 2px;"
            />
          </div>
        </div>
      </div>
      <div
        class="text-center mb-4"
      >
        <button
          class="btn bg-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;
